# GPSParking

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  local.properties  script.js  settings.gradle.kts  styles.css
GpsParkoALot/: Cargo.toml
app/: build.gradle.kts
app/src/androidTest/java/com/example/mygpslot/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/mygpslot/: MainActivity.kt
app/src/main/java/com/example/mygpslot/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/mygpslot/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
